Fix search params layout on small screens

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -278,8 +278,16 @@ footer {
   outline: none;
 }
 
+
 .search-params {
   justify-content: space-around;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 500px) {
+  .search-params {
+   flex-direction: row;
+  } 
 }
 
 @media screen and (min-width: 768px) {
